CMAKE_MINIMUM_REQUIRED(VERSION 3.7)
PROJECT(project)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_BUILD_TYPE DEBUG)

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

ADD_SUBDIRECTORY(deps/glfw)
ADD_SUBDIRECTORY(deps/glm)
ADD_SUBDIRECTORY(deps/gl3w)

CMAKE_POLICY(SET CMP0072 NEW)  # use GLVND over legacy OpenGL
FIND_PACKAGE(OpenGL REQUIRED)

SET(SOURCE_FILES main.cpp)

ADD_EXECUTABLE(entrypoint ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(entrypoint glfw)
TARGET_LINK_LIBRARIES(entrypoint glm)
TARGET_LINK_LIBRARIES(entrypoint gl3w)
TARGET_LINK_LIBRARIES(entrypoint OpenGL::GL)
