CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(project)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_BUILD_TYPE DEBUG)

SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)

CMAKE_POLICY(SET CMP0072 NEW)  # use GLVND over legacy OpenGL
FIND_PACKAGE(OpenGL REQUIRED)

ADD_SUBDIRECTORY(deps/glfw)
ADD_SUBDIRECTORY(deps/glm)
INCLUDE_DIRECTORIES(deps/gl3w/include)
ADD_LIBRARY(gl3w STATIC deps/gl3w/src/gl3w.c deps/gl3w/include/GL/gl3w.h)

SET(SOURCE_FILES main.cpp)

ADD_EXECUTABLE(entrypoint ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(entrypoint glfw)
TARGET_LINK_LIBRARIES(entrypoint glm)
TARGET_LINK_LIBRARIES(entrypoint OpenGL::GL)
TARGET_LINK_LIBRARIES(entrypoint gl3w)
